[B]Version 1.1.85[/B]
JavHDPorn - fixes
Flaresolverr support added, for sites being protected by Cloudflare.
More info here https://github.com/dobbelina/repository.dobbelina/wiki/Cloudflare-Challenges-and-Flaresolverr-Integration-with-Cumination
JavGuru - fix listing